adding new goods

--- a/technoshop-cms/index.html
+++ b/technoshop-cms/index.html
@@ -139,8 +139,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                   <input type="text" class="form-control" name="category" list="category" placeholder="Категория" aria-label="Категория товара(eng/rus)" required>
-                  <datalist id="category">
-                </datalist>
+                  <datalist id="category"></datalist>
                 </div>
                 <div class="col-12">
                   <textarea type="text" class="form-control" name="description" placeholder="Описание" aria-label="Описание товара" rows="5" required></textarea>
