sending data for editing

--- a/technoshop-cms/index.html
+++ b/technoshop-cms/index.html
@@ -153,7 +153,7 @@
               </div>
               <hr>
               <label tabindex="0" for="image" class="btn btn-primary d-block mx-auto">Добавить изображение</label>
-              <input class="visually-hidden" tabindex="-1" type="file" name="image" id="image">
+              <input class="visually-hidden" tabindex="-1" type="file" name="image" id="image" accept="image/jpeg, image/png">
               <input type="hidden" name="imagesave">
               <div class="wrapper-preview">
                 <img class="preview">
